package mvp;

message MVPAlgorithmOptions {
  required double alt_range = 1;
  optional bool fix_orientation = 2 [default=true];
  optional bool fix_windows = 3 [default=true];
  optional int32 max_iterations = 4 [default=80];
  optional double gauss_divisor = 5 [default=6];
  optional bool fast_reflectance = 6 [default=true];
}
